[package]
name = "mg24-install"
version = "0.1.2"
edition = "2024"
authors = ["Fahad Hiayri <fahadhiyari0@gamil.com>"]
description = "Install and setup MG24 SDK folders automatically for mg24-hal"
license = "MIT"
repository = "https://github.com/fr9rx/mg24-install"
homepage = "https://github.com/fr9rx/mg24-install"
documentation = "https://docs.rs/mg24-install"
readme = "README.md"
keywords = ["mg24", "gecko-sdk", "embedded", "hal", "siliconlabs"]
categories = ["hardware-support"]

[dependencies]
fs_extra = "1.3"
dirs = "5.0"

[[bin]]
name = "mg24-install"
path = "src/main.rs"
